...
            app:fabAlignmentMode="center"
            app:fabCradleRoundedCornerRadius="10dp"
            app:fabCradleVerticalOffset="10dp">


            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:background="@android:color/transparent"
                app:elevation="0dp"
...
